[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mewmew-orchestrator"
version = "0.2.0"
description = "Multi-agent orchestrator for AI coding CLI agents (codex, opencode, agy, etc.)"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Narmada Infosys", email = "hello@narmadainfosys.com" },
]
keywords = ["coding-agent", "orchestrator", "cli", "ai", "codex", "opencode", "antigravity"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Artificial Intelligence",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/narmadainfosys/mewmew_orchestrator"
Repository = "https://github.com/narmadainfosys/mewmew_orchestrator"
Issues = "https://github.com/narmadainfosys/mewmew_orchestrator/issues"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
tui = ["textual>=8.0.0"]

[project.scripts]
mew = "mewmew_orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["mewmew_orchestrator*"]
